# githab-ci-python-advanced

./: .gitlab-ci.yml  pyproject.toml  pytest.ini  requirements.txt  requrements.txt
.github/workflows/: ci.yml
app/: __init__.py  models.py
app/api/: parking.py
app/config/: development.py  test.py
module_26_fastapi/homework/: .flake8  cookbook.db  database.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  schemas.py  test_cookbook.db  test_main.py
tests/: conftest.py
tests/test_api/: test_parking.py
tests/test_integration/: test_factories.py
tests/test_unit/: test_models.py
