[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
)/
'''

[tool.isort]
line_length = 88
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_ptf = false
skip = ['migrations']
known_first_party = ['app', 'tests']

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "uvicorn.*",
    "pydantic.*"
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503, F401, E501"
exclude = 
    .git,
    __pycache__,
    .venv,
    .mypy_cache,
    build,
    dist,
    migrations
per-file-ignores =
    __init__.py:F401
    conftest.py:F401,E501