[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py39"]
include = "\\.pyi?$"
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
)/
'''

[tool.isort]
line_length = 88
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip = ["migrations"]
known_first_party = ["app", "tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = true
disallow_incomplete_defs = true
exclude = [
    "^app/models\\.py$",
    "^app/api/parking\\.py$",
    "^tests/conftest\\.py$",
    "^tests/test_unit/test_models\\.py$",
    "^tests/test_api/test_parking\\.py$",
    "^tests/test_integration/test_factories\\.py$",
]

[[tool.mypy.overrides]]
module = [
    "fastapi.*",
    "uvicorn.*",
    "pydantic.*"
]
ignore_missing_imports = true